# BadDNS

./: .gitignore  Cargo.toml  LICENSE  README.md  depth.txt
src/: check_handler.rs  cli.rs  dict.rs  gen_handler.rs  handler.rs  lib.rs  logger.rs  main.rs  mem_util.rs  query.rs  wildcards.rs  write_handler.rs
