[package]
name = "baddns"
version = "1.0.1"
authors = ["Link <link.messagebox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8", features = ["std"] }
rand = "0.7.3"
atty = "0.2"
yansi = "0.5"
clap = "2.33.0"
colored = "1.9.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
indicatif = "0.14.0"
trust-dns-client = "0.19.4"
pool-rs = { git = "https://github.com/linkwik/pool-rs.git"}
